base/argo-cd/base/notification/argocd-notifications-controller-metrics-service.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: /argocd-notifications-controller-metrics
  labels:
    app.kubernetes.io/component: notifications-controller
    app.kubernetes.io/name: argocd-notifications-controller-metrics
    app.kubernetes.io/part-of: argocd
  name: argocd-notifications-controller-metrics
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|default|argocd-notifications-controller-metrics'
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 9001
    targetPort: 9001
  selector:
    app.kubernetes.io/name: argocd-notifications-controller
